<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_regular"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/website_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_uri"
                android:inputType="textUri" />

            <Button
                android:id="@+id/open_website_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large_margin"
                android:onClick="openWebsite"
                android:text="@string/button_uri" />

            <EditText
                android:id="@+id/location_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_loc" />

            <Button
                android:id="@+id/open_location_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large_margin"
                android:onClick="openLocation"
                android:text="@string/button_loc" />

            <EditText
                android:id="@+id/share_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_share" />

            <Button
                android:id="@+id/share_text_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large_margin"
                android:onClick="shareText"
                android:text="@string/button_share" />

            <Button
                android:id="@+id/open_camera_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="openCamera"
                android:text="@string/button_camera" />

            <ImageView
                android:id="@+id/camera_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:contentDescription="@string/camera_image"
                android:visibility="invisible" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>